# sea-shell

./: .gitpod.yml  .replit  Cargo.toml  LICENSE  README.md  replit.nix  rustfmt.toml
src/: arg_parser.rs  commands.rs  default_logger.rs  lexer.rs  lib.rs  logger.rs  macro_helpers.rs  main.rs  parser.rs  state.rs  syntax.pest  syntax.rs
src/commands/: echo.rs  env.rs  exit.rs  help.rs  version.rs
src/lexer/: lexer.rs  tokens.rs
src/logger/: default.rs
