[package]
name = "sea-shell"
description = "A portable Bash-like shell written in Rust"
version = "0.0.10"
repository = "https://github.com/Sea-Shell-rs/Sea-Shell"
homepage = "https://sea-shell.jj.is-a.dev/"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For the CLI
rustyline = { version = "9.1", optional = true }
dirs = { version = "4.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Element"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
owo-colors = { version = "3.2", optional = true }

[profile.release]
lto = true
strip = "symbols"

[features]
std = []

[target.'cfg(target_arch = "wasm32")'.features]
default-logger = ["wasm-bindgen", "web-sys"]

[target.'cfg(not(target_arch = "wasm32"))'.features]
default-logger = ["owo-colors", "std"]
