[package]
name = "sea-shell"
description = "A portable Bash-like shell written in Rust"
version = "0.0.1"
repository = "https://github.com/Sea-Shell-rs/Sea-Shell"
homepage = "https://sea-shell.jj.is-a.dev/"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
